Fix image container's width
The image container was beign overlaped by the sidebar,
now the width is right and this should no longer happend

--- a/src/Application/ImageGridBundle/Resources/public/css/main.css
+++ b/src/Application/ImageGridBundle/Resources/public/css/main.css
@@ -1,5 +1,5 @@
 #content {
-width: 500px;
+width: 600px;
 float: left;
 }
 #sidebar {
